--- a/cv/css/contact.css
+++ b/cv/css/contact.css
@@ -3,24 +3,48 @@ body {
     background-size: cover;
     color: rgb(245,245,245);
     font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex;
+    flex-direction: column;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.content {
+    flex: 1;
+}
+
+header{
+    text-align: center;
+}
+
+header a{
+    margin-right: 30px;
+    color: rgb(204,238,255);
+    text-decoration: none;
+
+}
+
+#ery{
+    color: lightsalmon;
 }
 
 section{
     background-color: rgb(0,0,0,0.5);
+    width: 1350px;
+    margin-left: 100px;
 }
 
 h1{
     text-align: center;
 }
 
-#p1{
-    display: inline-block;
-    
-}
-
 a{
     margin-right: 10px;
     color: rgb(204,238,255);
+    text-decoration: none;
 }
 
 a:hover {
