--- a/cv/css/experience.css
+++ b/cv/css/experience.css
@@ -3,21 +3,49 @@ body {
     background-size: cover;
     color: rgb(245,245,245);
     font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex;
+    flex-direction: column;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.content {
+    flex: 1;
+}
+
+header{
+    text-align: center;
+}
+
+hr{
+    color: white;
+}
+
+#ery{
+    color: lightsalmon;
+}
+
+header a{
+    margin-right: 30px;
+    color: rgb(204,238,255);
+    text-decoration: none;
+
 }
 
 section{
     background-color: rgb(0,0,0,0.5);
-    height: 420px;
-}
-
-#p1{
-    display: inline-block;
     
+    width: 1350px;
+    margin-left: 100px;
 }
 
 a{
     margin-right: 10px;
     color: rgb(204,238,255);
+    text-decoration: none;
 }
 
 a:hover {
@@ -30,19 +58,18 @@ a:hover {
     display: inline-block;
     margin-right: 10px;
 }
-img{
-    float: left;
-    transition:all 1s
-}
 
-img:hover{
+.image:hover{
     transform:scale(1.2)
 }
 
 .image{
     margin-right: 10px;
     margin-left: 20px;
+    float: left;
+    transition:all 1s
 }
+
 li{
     list-style: none;
     display: inline-block;
